--- a/src/components/DetailArticle/style.css
+++ b/src/components/DetailArticle/style.css
@@ -1,6 +1,6 @@
 .button-home {
-   width: 750px;
-   margin: 55px auto 50px auto;
+   width: 92%;
+   margin: 38px auto 50px auto;
 }
 
 .to-home {
@@ -20,25 +20,28 @@
    background-color: #192734;
 }
 
+
+/* Detail Article */
+
 .container-article {
-   width: 750px;
+   width: 90%;
    color: #ffffff;
    font-family: Ubuntu;
    margin: 50px auto 25px auto;
 }
 
 .head__title {
-   font-size: 40px;
-   line-height: 49px;
+   font-size: 2.2em;
+   line-height: 47px;
    font-weight: bolder;
    letter-spacing: 2px;
 }
 
 .head__published {
    color: #5f9ea0;
-   font-size: 19px;
+   font-size: 1.2em;
    letter-spacing: 2px;
-   margin: 15px 0 20px 0;
+   margin: 23px 0 25px 0;
    font-family: monospace;
 }
 
@@ -46,7 +49,7 @@
    float: left;
    padding: 6px;
    color: #ffffff;
-   font-size: 16px;
+   font-size: 1em;
    text-align: center;
    margin-right: 20px;
    font-weight: bolder;
@@ -57,7 +60,7 @@
 }
 
 .article-body {
-   margin: 100px 0 70px 0;
+   margin: 135px 0 70px 0;
 }
 
 
@@ -71,7 +74,7 @@
 
 /* paragraph / text tag */
 .article-body p {
-   font-size: 20px;
+   font-size: 1.2em;
    word-spacing: 3px;
    line-height: 30px;
    margin-bottom: 40px;
@@ -100,37 +103,37 @@
 
 /* heading tag */
 .article-body h1 {
-   font-size: 32px;
+   font-size: 2.3em;
    font-weight: bolder;
    margin-bottom: 40px;
 }
 
 .article-body h2 {
-   font-size: 24px;
+   font-size: 2.1em;
    font-weight: bolder;
    margin-bottom: 40px;
 }
 
 .article-body h3 {
-   font-size: 18.72px;
+   font-size: 1.8em;
    font-weight: bolder;
    margin-bottom: 40px;
 }
 
 .article-body h4 {
-   font-size: 16px;
+   font-size: 1.7em;
    font-weight: bolder;
    margin-bottom: 40px;
 }
 
 .article-body h5 {
-   font-size: 13.28px;
+   font-size: 1.4em;
    font-weight: bolder;
    margin-bottom: 40px;
 }
 
 .article-body h6 {
-   font-size: 10.72px;
+   font-size: 1.3em;
    font-weight: bolder;
    margin-bottom: 40px;
 }
@@ -145,7 +148,7 @@
 
 .article-body ul li,
 .article-body ol li {
-   font-size: 20px;
+   font-size: 1.2em;
    list-style: disc;
    word-spacing: 3px;
    line-height: 28px;
@@ -182,6 +185,7 @@
 
 .article-body blockquote p {
    display: inline;
+   font-size: 1.2em;
    font-style: italic;
 }
 
@@ -197,7 +201,7 @@
 .article-body tr,
 .article-body td {
    padding: 13px;
-   font-size: 20px;
+   font-size: 1.2em;
    word-spacing: 3px;
    margin-bottom: 40px;
    border: 3px solid #ffffff;
@@ -212,7 +216,7 @@
 .article-body pre,
 .article-body code,
 .article-body span {
-   font-size: 17px;
+   font-size: 1.06em;
    line-height: 30px;
    border-radius: 6px;
    margin-bottom: 40px;
@@ -226,4 +230,41 @@
    display: block;
    max-width: 100%;
    margin: 10px auto 40px auto;
+}
+
+
+/* Responsive Breakpoints */
+
+@media screen and (min-width: 620px) {
+   .container-article {
+      width: 70%;
+   }
+
+   .head__title {
+      font-size: 2.5em;
+      line-height: 49px;
+   }
+
+   .head__date {
+      font-size: 1.4em;
+   }
+
+   .head__tag {
+      font-size: 1.2em;
+   }
+
+   .article-body p {
+      font-size: 1.3em;
+   }
+}
+
+@media screen and (min-width: 1200px) {
+   .container-article {
+      width: 40%;
+   }
+
+   .article-body {
+      width: 93%;
+      margin-top: 160px;
+   }
 }
